objects/SMAX_PS_InstalledProductClassification__c.object
<CustomObject>
    <label>Installed Product Classification</label>
    <nameField>
        <displayFormat>IPC-{0000000000}</displayFormat>
        <label>Installed Product Classification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installed Product Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SMAX_PS_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Characteristic__c</fullName>
        <label>Characteristic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InstalledProduct__c</fullName>
        <label>Equipment Number</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Installed Product Classifications</relationshipLabel>
        <relationshipName>Installed_Product_Classifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>